[package]
name = "git-secret-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the git-secret workflow that delegates OpenPGP operations to gpg."
license = "MIT OR Apache-2.0"

[[bin]]
name = "git-secret"
path = "src/main.rs"

[[test]]
name = "imported_init"
path = "tests/imported-tests/init.rs"

[[test]]
name = "imported_add"
path = "tests/imported-tests/add.rs"

[[test]]
name = "imported_cat"
path = "tests/imported-tests/cat.rs"

[[test]]
name = "imported_hide"
path = "tests/imported-tests/hide.rs"

[[test]]
name = "imported_remove"
path = "tests/imported-tests/remove.rs"

[[test]]
name = "imported_tell"
path = "tests/imported-tests/tell.rs"

[[test]]
name = "imported_removeperson"
path = "tests/imported-tests/removeperson.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
sha2 = "0.10.8"
